# microflow-rs

./: .gitignore  CHANGELOG.md  CITATION.cff  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  Makefile.toml  README.md  tf_setup.py
.github/workflows/: cargo.yml
analysis/accuracy/: sine.ipynb
analysis/accuracy/data/: sine-microflow.csv  sine-test-set.csv  sine-tflite.csv
analysis/memory/: person_detect.ipynb  sine.ipynb  speech.ipynb
analysis/performance/: person_detect.ipynb  sine.ipynb  speech.ipynb
analysis/performance/data/: person-detect-nrf52840-microflow.csv  person-detect-nrf52840-tflm.csv  person_detect-esp32-microflow.csv  person_detect-esp32-tflm.csv  sine-esp32-microflow.csv  sine-esp32-tflm.csv  sine-nrf52840-microflow.csv  sine-nrf52840-tflm.csv  speech-esp32-microflow.csv  speech-esp32-tflm.csv  speech-nrf52840-microflow.csv  speech-nrf52840-tflm.csv
assets/: microflow-logo.pxd
benches/: person_detect.rs  sine.rs  speech.rs
examples/: cifar10-C.rs  cifar10_depthwise_train.rs  cifar10_train.rs  inside_outside_train.rs  leNet_conv_train.rs  leNet_mnist_train.rs  leNet_svhn_train.rs  leNet_train.rs  leNet_usps_train.rs  minimal.rs  person_detect.rs  sine.rs  sine_train.rs  speech.rs  speech_train.rs
examples/arduino/: Cargo.toml  Makefile.toml
examples/arduino-nano-33-ble/: Cargo.toml
examples/arduino-nano-33-ble/examples/: person_detect.rs  speech.rs
examples/arduino-nano33ble/: Cargo.toml  memory.x
examples/arduino-nano33ble/.cargo/: config.toml
examples/arduino-nano33ble/examples/: person_detect.rs  sine.rs  speech.rs
examples/arduino-uno/: Cargo.toml  Makefile.toml  rust-toolchain.toml
examples/arduino-uno/.cargo/: config.toml
examples/arduino-uno/examples/: sine.rs
examples/arduino/.cargo/: config.toml
examples/arduino/examples/: minimal.rs  sine.rs
examples/atsamx7x/: Cargo.toml  Makefile.toml  memory.x
examples/atsamx7x/.cargo/: config.toml
examples/atsamx7x/examples/: minimal.rs  person_detect.rs  sine.rs  speech.rs
examples/esp32/: Cargo.toml  Makefile.toml
examples/esp32/.cargo/: config.toml
examples/esp32/examples/: minimal.rs  person_detect.rs  sine.rs  speech.rs
examples/microflow-vs-tflite/: Cargo.toml  main.ipynb  main.rs  microflow.csv  tflite.csv
examples/microflow-vs-tflite/src/: main.rs
examples/minimal/: Cargo.toml  main.rs
examples/minimal/src/: main.rs
examples/models/: sine.tflite
examples/person_detect/: main.rs
examples/qemu/: Cargo.toml  Makefile.toml
examples/qemu/.cargo/: config.toml
examples/qemu/examples/: minimal.rs  sine.rs  speech.rs
examples/sine/: main.rs
examples/speech/: features.rs  main.rs
features/: speech.rs
microflow-macros/: Cargo.toml  build.rs
microflow-macros/flatbuffers/: tflite_generated.rs
microflow-macros/src/: activation.rs  buffer.rs  layers.rs  lib.rs  matrix.rs  ops.rs  quantize.rs  tensor.rs
microflow-macros/src/ops/: average_pool_2d.rs  conv_2d.rs  depthwise_conv_2d.rs  fully_connected.rs  mod.rs  quantize.rs  reshape.rs  resize_bilinear.rs  softmax.rs  transpose.rs
microflow-odt-macros/: Cargo.toml
microflow-odt-macros/src/: buffer.rs  lib.rs  quantize.rs  tensor.rs
microflow-odt-macros/src/ops/: average_pool_2d.rs  conv_2d.rs  crossentropy.rs  depthwise_conv_2d.rs  fully_connected.rs  mod.rs  mse.rs  reshape.rs  softmax.rs
models/train/: cifar10.tflite  cifar10_depthwise.tflite  cifar10_quantized_fixed_batch.tflite  leNetMnist.tflite  leNetSVHN.tflite  le_net_usps2mnist.tflite  lenet.tflite  lenet_mnist2usps.tflite  outside_inside.tflite  sine.tflite  speech_small_softmax.tflite
samples/features/: person_detect.rs
src/: activation.rs  activations.rs  buffer.rs  gradient_average_pool.rs  gradient_conv_2d.rs  gradient_depthwise_conv_2d.rs  gradient_fully_connected.rs  lib.rs  ops.rs  quantize.rs  tensor.rs  update_layer.rs
src/ops/: average_pool_2d.rs  conv_2d.rs  depthwise_conv_2d.rs  fully_connected.rs  mod.rs  reshape.rs  resize_bilinear.rs  softmax.rs  transpose.rs
tests/: models.rs  person_detect.rs  sine.rs  speech.rs
