[package]
name = "microflow"
version = "0.1.0"
edition = "2021"

[dependencies]
microflow-macros = { version = "0.1", path = "microflow-macros" }
nalgebra = { version = "0.32", default-features = false, features = ["macros"] }
simba = { version = "0.8", default-features = false }
libm = "0.2"

[dev-dependencies]
csv = "1.2"
criterion = "0.5"

[[bench]]
name = "sine"
harness = false

[[bench]]
name = "speech"
harness = false

[[bench]]
name = "person_detect"
harness = false

[workspace]
members = ["microflow-macros"]
exclude = ["examples"]

[patch.crates-io]
nalgebra = { git = "https://github.com/matteocarnelos/nalgebra" }

[profile.release]
lto = true
