[package]
name = "microflow"
description = "A robust and efficient TinyML inference engine"
authors = ["Matteo Carnelos <matteo.carnelos98@gmail.com>"]
documentation = "https://docs.rs/microflow"
repository = "https://github.com/matteocarnelos/microflow-rs"
categories = ["embedded", "no-std", "science"]
keywords = ["tinyml"]
license = "MIT OR Apache-2.0"
version = "0.1.3"
edition = "2021"
include = [
    "/src/**",
    "/benches/**",
    "/tests/**",
    "/models/**",
    "/Cargo.toml",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
    "/README.md",
]

[dependencies]
microflow-macros = { version = "0.1", path = "microflow-macros" }
microflow-odt-macros = { version = "0.1", path = "microflow-odt-macros" }
nalgebra = { version = "0.32", default-features = false, features = ["macros"] }
simba = { version = "0.8", default-features = false }
libm = "0.2"
cargo-expand = "1.0.110"
num-traits = {version = "0.2.19", default-features = false}

[dev-dependencies]
ndarray = "0.16.1"
ndarray-npy = "0.9.1"
csv = "1.2"
criterion = "0.5"
image = "0.25.6"
rand = "0.9.1"
zip = "4.5.0"

[[bench]]
name = "sine"
harness = false

[[bench]]
name = "speech"
harness = false

[[bench]]
name = "person_detect"
harness = false

[workspace]
members = ["microflow-macros", "microflow-odt-macros"]
exclude = ["examples"]

[patch.crates-io]
nalgebra = { git = "https://github.com/matteocarnelos/nalgebra" }

[profile.release]
lto = true
