[package]
name = "microflow-odt-macros"
description = "Macro crate of the MicroFlow train module, namely, the MicroFlow compiler"
authors = ["Matteo Carnelos <matteo.carnelos98@gmail.com>","Giovanni Artico <giovanni.artico@gmail.com>"]
documentation = "https://docs.rs/microflow-macros"
repository = "https://github.com/matteocarnelos/microflow-rs"
readme = "../README.md"
categories = ["embedded", "no-std", "science"]
keywords = ["tinyml"]
license = "MIT OR Apache-2.0"
version = "0.1.1"
edition = "2021"
include = [
    "/src/**",
    "flatbuffers/**",
    "/Cargo.toml",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
proc-macro-error = "1.0"
flatbuffers = "23.1"
nalgebra = "0.32"
simba = "0.8"
byterepr = "0.1"
structmeta = "0.3"
