[package]
name = "examples-atsamx7x"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7"
cortex-m-rtic = "1.1"
rtt-target = { version = "0.3", features = ["cortex-m"] }
panic-probe = { version = "0.3", features = ["print-rtt"] }
atsamx7x-hal = { version = "0.4", features = ["samv71q21b-rt", "unproven"] }
libm = "0.2"
nalgebra = { version = "0.32", default-features = false, features = ["macros"] }
microflow = { path = "../.." }

[profile.release]
lto = true
