[package]
name = "examples-atsamx7x"
version = "0.0.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rtic = "1.1"
rtt-target = { version = "0.3", features = ["cortex-m"] }
panic-probe = { version = "0.3", features = ["print-rtt"] }
hal = { package = "atsamx7x-hal", version = "0.4", features = ["samv71q21b-rt", "unproven"] }
microflow = { path = "../.." }
nalgebra = { version = "0.32", default-features = false, features = ["macros"] }
libm = "0.2"

[profile.release]
opt-level = "z"
lto = true
