[package]
name = "examples-esp32"
version = "0.0.0"
edition = "2021"

[dependencies]
esp-println = { version = "0.11", features = ["esp32"] }
esp-backtrace = { version = "0.14", features = ["esp32", "panic-handler", "println"] }
hal = { package = "esp-hal", version = "0.20", features = ["esp32"] }
microflow = { path = "../.." }
nalgebra = { version = "0.32", default-features = false, features = ["macros"] }
libm = "0.2"

[profile.release]
lto = true
